fix overlapping dropdown items

--- a/public/stylesheets/nav.css
+++ b/public/stylesheets/nav.css
@@ -2,33 +2,45 @@
 .dropdown-button {
     background-color: #04AA6D;
     color: white;
-    padding: 10px;
+    padding: 1vmin;
     font-size: 16px;
     border: none;
+  
+}
+
+.dropdown-button > img {
+    vertical-align: middle;
+    border-radius: 50%;
+    width: 5vmin;
+}
+
+#dropdown-username {
+    padding: 0 0 0 0.75vmin;
 }
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
-
-display: inline-block;
+    display: inline-block;
+    padding: 0;
+    position: relative;
+    z-index: 999;
 }
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-menu {
-display: none;
+    display: none;
 
-background-color: #f1f1f1;
-min-width: 160px;
-box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    background-color: #f1f1f1;
+    position: absolute;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);  
 
 }
 
 /* Links inside the dropdown */
 .dropdown-menu a {
-color: black;
-
-
-display: block;
+    color: black;
+    display: block;
+    padding: 12px 16px;
 }
 
 /* Change color of dropdown links on hover */
